making department api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ spring.datasource.password=root@12345
 
 spring.jpa.open-in-view=false
 
+#spring.devtools.restart.enabled=false
+
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+
 spring.jpa.hibernate.ddl-auto=update
 
 server.servlet.context-path=/api
